# lucit-licensing-python

./: .coveragerc  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  dev_test.py  dev_test_functions.py  environment.yml  example_lucit_license.ini  lucit_license.ini  meta.yaml  pyproject.toml  requirements.txt  reset.sh  setup.py  test.py  test_licensing.py  unittest_lucit_licensing_python.py
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: build_binary_wheels.yml  build_conda.yml  build_wheels.yml  build_wheels2.yml  codacy.yml  codeql-analysis.yml  python-package-conda.yml  test.yml  unit-tests.yml  wheel.yml
dev/: link_lib.sh  reset.sh  set_version.py  set_version_config.txt  test_functions.py  test_start.py  unlink_lib.sh
dev/pypi/: create_wheel.sh  install_packaging_tools.sh  (+2 more)
docs/: .buildinfo  CHANGELOG.html  CNAME  README.html  changelog.html  code_of_conduct.html  contributing.html  copyright.html  genindex.html  index.html  license.html  lucit_licensing_python.html  modules.html  objects.inv  py-modindex.html  readme.html  search.html  searchindex.js  security.html
docs-old/: CNAME  README.html  index.html  modules.html  searchindex.js
lucit_licensing_python/: __cli__.py  __init__.py  cli.py  exceptions.py  licensing_cli.py  licensing_manager.py  manager.py
pypi/: create_wheel.sh  install_packaging_tools.sh  remove_files.sh  upload_wheel.sh
sphinx/: create_docs.sh  install_sphinx.sh  release_docs.sh  release_docs_mac.sh
(+34 files in other folders)
